# icon-to-image

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: release.yml
benches/: icon_rendering.rs
python/icon_to_image/: __init__.py
src/: color.rs  css_parser.rs  embedded.rs  encoder.rs  error.rs  lib.rs  main.rs  python.rs  renderer.rs
tests/: test_renderer.py
