[package]
name = "icon-to-image"
version = "0.2.0"
edition = "2021"
description = "Fast icon font to image renderer with Python bindings"
license = "MIT"

[lib]
name = "icon_to_image"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "icon-to-image"
path = "src/main.rs"
required-features = []

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
# Font rendering
ab_glyph = "0.2"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png",
    "webp",
] }

# Python bindings
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py310"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Parallelism for supersampling
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "icon_rendering"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind"
