[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "icon-to-image"
version = "0.2.0"
description = "Fast and high quality Font Awesome icon to image renderer"
authors = [{ name = "Max Woolf", email = "max@minimaxir.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["fontawesome", "icon", "image", "rendering", "rust"]

[project.urls]
Homepage = "https://github.com/minimaxir/icon-to-image"

[project.scripts]
icon-to-image = "icon_to_image:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pillow>=9.0"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "icon_to_image._native"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
